Change background render

--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/background.render.jpg");
+  background-image: url("background.render.jpg");
   background-repeat: none;
 }
 
